--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/blobs": "^4.0.0",
     "@netlify/functions": "^3.1.9"
   }
 }
