--- a/package.json
+++ b/package.json
@@ -9,8 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@netlify/blobs": "^4.0.0",
-    "@netlify/functions": "^3.1.9"
-  }
+  "dependencies": {}
 }
